--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -1,13 +1,11 @@
-.info image {
+.info image{
   width: 100%;
 }
-
-page {
+page{
   background: #f1ecec;
   padding-bottom: 200rpx;
 }
-
-.bao {
+.bao{
   display: flex;
   justify-content: space-between;
   background-color: #fff;
@@ -15,25 +13,22 @@ page {
   font-size: 30rpx;
   border-radius: 15rpx;
 }
-
-.other {
+.other{
   background-color: #fff;
   margin-top: 15rpx;
   padding: 30rpx 15rpx;
   font-size: 36rpx;
   border-radius: 15rpx;
 }
-
-.price {
+.price{
   color: red;
   font-size: 40rpx;
   margin-top: 15rpx;
 }
-
-.bot {
+.bot{
   width: 100%;
   position: fixed;
-  bottom: 10rpx;
+  bottom: 0rpx;
   left: 0;
   height: 100rpx;
   background-color: #fff;
@@ -43,31 +38,35 @@ page {
   justify-content: space-between;
   box-sizing: border-box;
 }
-
-.bot>view {
+.bot>view{
   border-radius: 20rpx;
-  border: 1rpx solid #fff;
+  border:1rpx solid #fff;
   text-align: center;
   padding: 10rpx 30rpx;
 }
 
-.bot>view:first-child {
-  background-color: yellow;
-}
-
-.bot>view:last-child {
-  background-color: red;
-}
-
-.loading {
+.loading{
   text-align: center;
 }
-
-.detail {
+.detail{
   width: 100%;
 
 }
-
-.detail image {
+.detail image{
   width: 100%;
+}
+
+.myButton {
+	box-shadow:inset 0px 39px 0px -24px #e67a73;
+	background-color:#e4685d;
+	border-radius:4px;
+	border:1px solid #ffffff;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:6px 15px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #b23e35;
 }
