--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -7,6 +7,8 @@
   position: relative;
 }
 
+/* 搜索框样式 */
+
 .search {
   height: 100rpx;
   width: 100%;
@@ -16,42 +18,50 @@
   justify-content: flex-start;
   align-items: center;
   box-sizing: border-box;
+  margin-bottom: 30rpx;
 }
 
 .search .txt {
-  height: 42rpx;
-  line-height: 42rpx;
+  height: 100rpx;
+  line-height: 100rpx;
   color: #666;
   padding-left: 10rpx;
-  font-size: 28rpx;
+  font-size: 30rpx;
 }
+
+/* 搜索框样式 */
+/* 轮播图样式 */
 
 .banner-wrap {
   width: 100%;
-  height: 280rpx;
+  height: 300rpx;
   display: flex;
   justify-content: center;
+  margin-bottom: 30rpx;
 }
 
 .banner {
   width: 750rpx;
-  height: 250rpx;
+  height: 300rpx;
 }
 
 .banner image {
   width: 100%;
-  /* height: 417rpx; */
-  height: 280rpx;
+  height: 300rpx;
+  border-radius: 20rpx;
 }
 
+/* 轮播图样式 */
+/* 产品分类样式 */
+
 .catalog-wrap {
-  margin: 20rpx 0;
   width: 100%;
   height: 144rpx;
   box-sizing: border-box;
+  margin-bottom: 30rpx;
 }
 
-.catalog-wrap .first {
+.catalog-wrap .item {
   width: 100%;
   box-sizing: border-box;
   padding: 0 30rpx;
@@ -81,29 +91,34 @@
 }
 
 /* goods-container */
-.goods-container{
+.goods-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.goods-container .item{
+
+.goods-container .item {
   width: 47%;
+  margin-bottom: 30rpx;
 }
-.goods-container image{
+
+.goods-container image {
   width: 100%;
   max-height: 300rpx;
 }
-.goods-container .name{
-  overflow: hidden;            
-  text-overflow: ellipsis;    
-  white-space: nowrap; 
-  font-size: 33rpx;
+
+.goods-container .goods-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 30rpx;
+  margin-bottom: 10rpx;
 }
-.goods-container .price{
+
+.goods-container .price {
   color: red;
   font-size: 30rpx;
 }
-
 
 /* 没有更多  */
 
@@ -122,6 +137,7 @@
   font-weight: 600;
   margin-bottom: 30rpx;
 }
-.loading{
+
+.loading {
   text-align: center;
 }
