--- a/pages/order/order_pay/order_pay.wxml
+++ b/pages/order/order_pay/order_pay.wxml
@@ -1,9 +1,30 @@
 <header statue='1' title='订单支付'></header>
 
 <view class="address">
-  <view> <text class="iconfont icon-jia"></text> <text>添加收获地址</text></view>
+  <view wx:if="{{!addr}}" bindtap="addAddr"> <text class="iconfont icon-jia"></text> <text>添加收获地址</text></view>
+  <view wx:else class="address-item">
+    <view class="left">
+      <view class="header"><text>{{addr.userName}}</text><text>{{addr.phone}}</text></view>
+      <view class="bottom">{{addr.address}}{{addr.detail}}</view>
+    </view>
+    <view data-id="{{index}}" bindtap="addAddr" class="right iconfont icon-youjiantou1"></view>
+  </view>
 </view>
 
-<view>
-  
+<view class="goods_show">
+  <goods></goods>
+  <view class="bot_info">
+    <view><text>商品总额</text><view>￥9999</view></view>
+    <view><text>运费</text><view>免运费</view></view>
+    <view><text>活动优惠</text><view>暂无</view></view>
+    <view><text>优惠券</text><view>选择优惠卷<text class="iconfont icon-youjiantou1"></text></view></view>
+    <view><text>发票</text><view>暂不开发票<text class="iconfont icon-youjiantou1"></text></view></view>
+    <view><text>订单备注</text><view>请联系客服<text class="iconfont icon-youjiantou1"></text></view></view>
+    <view class="total"><view>共3件，小计<text>￥99999</text></view></view>
+  </view>
+</view>
+
+<view class="sum">
+  <text>￥99999</text>
+  <view>提交订单</view>
 </view>
