--- a/pages/order/order_pay/order_pay.wxss
+++ b/pages/order/order_pay/order_pay.wxss
@@ -2,6 +2,7 @@ page{
   padding-left: 0;
   padding-right: 0;
   background-color: #f5f5f5;
+  padding-bottom: 200rpx!important;
 }
 .address{
   padding: 30rpx 40rpx;
@@ -13,5 +14,74 @@ page{
   border-radius: 50%;
   color: #c1c1c1;
   margin-right: 20rpx;
+}
+.goods_show{
+  padding: 30rpx 40rpx;
+  background-color: #fff;
+  margin-top: 30rpx;
+}
+.bot_info>view{
+  display: flex;
+  justify-content: space-between;
+  margin: 40rpx 0;
+  font-size: 30rpx;
+}
+.bot_info .iconfont{
+  color: #ccc;
+  font-size: 30rpx;
+}
+.total{
+  width: 100%;
+  display: block!important;
+  text-align: right;
   
+}
+.total text{
+  color: red;
+  font-size: 40rpx;
+  margin-top: 30rpx;
+}
+.sum{
+  width: 100%;
+  position: fixed;
+  bottom: 0rpx;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 30rpx 40rpx;
+  box-sizing: border-box;
+  background-color: #fff;
+  align-items: center;
+}.sum>view{
+  text-align: center;
+  padding: 30rpx;
+  background-color: #c1c1c1;
+  border-radius: 40rpx;
+}
+.address-item{
+  padding: 30rpx 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1rpx solid #ccc;
+}
+.address-item .header{
+  font-size: 30rpx;
+  font-weight: bold;
+  margin-bottom: 10rpx;
+}
+.address-item .header>text:nth-child(1){
+  margin-right: 20rpx;
+}
+.address-item .bottom{
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  color: #999999;
+}
+.address-item .right{
+  font-size: 54rpx;
+  color: #999999;
 }
