--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,29 +1,20 @@
 .container {
-  min-height: 100%;
   background-color: #fff;
 }
 
 .search-header {
-  width: 750rpx;
-  height: 92rpx;
-  display: flex;
-  background: #fff;
-  border-bottom: 1px solid #f1f1f1;
-  padding: 0 24rpx;
-  font-size: 29rpx;
-  color: #333;
-  box-sizing: border-box;
-  align-items: center;
-}
-.search-header .input-box {
-  position: relative;
-  margin-bottom: 10rpx;
-  width: 0;
-  flex: 1;
   height: 80rpx;
   line-height: 80rpx;
-  padding: 0 20rpx;
-  background: #fafafa;
+  background: #f3f3f3;
+  border-radius: 30rpx;
+  border: 1rpx solid #ccc;
+  font-size: 29rpx;
+  padding: 0 30rpx;
+  box-sizing: border-box;
+}
+.search-header input{
+  width: 100%;
+  height: 100%;
 }
 
 .search-header .keywrod {
