--- a/pages/cart/index.wxss
+++ b/pages/cart/index.wxss
@@ -1,62 +1,45 @@
-.container {
-  background-color: #fff;
-  min-height: 100%;
-  align-items: stretch;
-  overflow-x: hidden;
-  position: relative;
-}
-
-/* goodslist */
-.goodslist {
-  width: 100%;
+.cart_item{
   display: flex;
-  flex-direction: column;
-  background-color: pink;
-}
 
-.goodslist .good {
-  height: 200rpx;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
 }
-
-.goodslist image {
-  width: 180rpx;
+.info image{
+  width: 200rpx;
   height: 180rpx;
 }
-
-.goodslist .count {
+.info{
+  flex:1;
   display: flex;
-  font-display: row;
-  width: 100rpx;
+}
+.other{
+  display: flex;
   justify-content: space-between;
 }
-
-/* bottom */
-.bottom {
+.info>view{
+  flex: 1;
+}
+.t-radio{
+  padding: 30rpx 0!important;
+}
+.control{
   position: fixed;
-  left: 0;
-  padding: 0;
-  margin: 0;
   bottom: 0;
+  left: 0;
   width: 100%;
-  height: 120rpx;
+  border:2rpx solid #e5e5e5;
+  padding: 30rpx 20rpx;
+  box-sizing: border-box;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  background-color: #fff;
+  justify-content: space-between;
 }
-
-.bottom .checkedbox t-radio {
-  font-size: 36rpx;
+.control>view:first-child{
+  display: flex;
+  align-items: center;
 }
-
-.bottom .total {
-  font-size: 36rpx;
-}
-
-.bottom .pay button {
-  font-size: 36rpx;
+.control>view:last-child{
+  padding: 20rpx 30rpx;
+  text-align: center;
+  background-color: #fa4126;
+  color:#fff;
+  border-radius: 20rpx;
 }
