--- a/components/detail/index.wxss
+++ b/components/detail/index.wxss
@@ -23,3 +23,15 @@ image{
   font-weight: normal;
   font-size: 30rpx;
 }
+.desc{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient:vertical;
+  -webkit-line-clamp:3;
+}
+.title{
+  overflow: hidden;           
+  text-overflow: ellipsis;  
+  white-space: nowrap;
+  margin-bottom: 15rpx;
+}
