--- a/pages/ke/item/item.wxss
+++ b/pages/ke/item/item.wxss
@@ -16,3 +16,10 @@
   max-width: 450rpx;
   max-height: 230rpx;
 }
+.loading {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
