--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -4,20 +4,21 @@
 
 <t-tabs defaultValue="{{value}}" bind:change="onTabsChange">
   <t-tab-panel wx:for="{{tarbars}}" wx:key="idnex" label="{{item.content}}" value="{{item.value}}">
-    <view class="box">
+    <view class="box" wx:for="{{orderList}}" wx:key="index"  wx:for-item="itm">
       <view class="nav_title">
-        <view>订单号：128452038283</view><view class="nav_title_info">{{item.content}}</view>
+        <view>订单号：{{itm._id}}</view>
       </view>
-      <view class="content">
-        <image src="./../../style/images/01.png"></image>
+      <view class="content" wx:for="{{itm.OrderList}}" wx:for-item="itm2">
+        <image src="{{itm2.goods.imgs[0]}}"></image>
         <view class="content_info">
           <view>
-            <view>标题</view>
-            <view>描述信息</view>
+            <view>{{itm2.goods.title}}</view>
+            <view class="desc">{{itm2.goods.desc}}</view>
+            <view bindtap="goCommit" class="commit" wx:if="{{!itm2.commit}}">评价</view>
           </view>
           <view>
-            <view>￥99</view>
-            <view>x2</view>
+            <view class="price">￥{{itm2.goods.price}}</view>
+            <view>x{{itm2.num}}</view>
           </view>
         </view>
       </view>
