--- a/style/iconfont.wxss
+++ b/style/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3386126 */
-  src: url('//at.alicdn.com/t/font_3386126_1cweglv12n.woff2?t=1653364697377') format('woff2'),
-       url('//at.alicdn.com/t/font_3386126_1cweglv12n.woff?t=1653364697377') format('woff'),
-       url('//at.alicdn.com/t/font_3386126_1cweglv12n.ttf?t=1653364697377') format('truetype');
+  src: url('//at.alicdn.com/t/font_3386126_ebed8l86fp.woff2?t=1653876654990') format('woff2'),
+       url('//at.alicdn.com/t/font_3386126_ebed8l86fp.woff?t=1653876654990') format('woff'),
+       url('//at.alicdn.com/t/font_3386126_ebed8l86fp.ttf?t=1653876654990') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fenxiang:before {
+  content: "\eb24";
 }
 
 .icon-cuowuguanbiquxiao:before {
